Ersetzung von Sonderzeichen in Dateinamen verbessert